# wakkave

./: .babelrc  .eslintrc.js  .gitignore  Cargo.toml  Makefile  README.md  build.rs  diesel.toml  package-lock.json  package.json  webpack.config.js
backend/: Cargo.toml
backend/src/: chatserver.rs  lib.rs  main.rs  server.rs  token.rs  websocket.rs
backend/src/database/: executor.rs  models.rs
frontend/: Cargo.toml
frontend/src/: app.js  index.js  lib.rs  protocol.rs  style.scss  wasm_error.js
frontend/src/components/: feed.js  login.js  post.js
migrations/2018-08-02-182111_create_sessions/: up.sql
migrations/2018-08-15-002331_create_users/: up.sql
migrations/2018-08-22-204257_create_posts/: up.sql
migrations/2018-08-22-231410_create_votes/: down.sql  up.sql
src/: lib.rs  main.rs  protocol.capnp
src/backend/: chatserver.rs  main.rs  mod.rs  server.rs  token.rs  websocket.rs
src/backend/database/: executor.rs  mod.rs  models.rs  schema.rs
src/frontend/: login.rs  main.rs  mod.rs  routes.rs
src/frontend/components/: feed.rs  login.rs  mod.rs  root.rs
src/frontend/services/: cookie.rs  mod.rs  protocol.rs  router.rs  websocket.rs
static/: index.html
