[package]
name = "wakkave"
version = "0.1.0"
authors = ["Steve Sweetney <stevesweetney@gmail.com>"]

[[bin]]
name = "backend"
path = "src/backend/main.rs"
required-features = ["default"]
[[bin]]
name = "frontend"
path = "src/frontend/main.rs"
required-features = ["frontend"]

[build-dependencies]
capnpc = "0.8.9"

[dependencies]
actix = {version = "^0.5.8", optional = true}
actix-web = {version = "0.6", optional = true}
capnp = "0.8.17"
yew = { git = "https://github.com/DenisKolodin/yew", optional = true }
jsonwebtoken = { version = "4", optional = true }
serde_derive = { version = "1", optional = true }
serde = { version = "1", optional = true }
uuid = { version = "0.6", features = ["v4"], optional = true }
time = { version = "0.1.40", optional = true }
lazy_static = "1.0.2"
failure = "0.1.1"

[features]
default = [
    "actix", "actix-web",
    "serde", "serde_derive",
    "jsonwebtoken",
    "uuid",
    "time",
]
frontend = [
    "yew"
]
