[package]
name = "wakkave"
version = "0.1.0"
authors = ["Steve Sweetney <stevesweetney@gmail.com>"]

[[bin]]
name = "backend"
path = "src/backend/main.rs"
required-features = ["default"]
[[bin]]
name = "frontend"
path = "src/frontend/main.rs"
required-features = ["frontend"]

[build-dependencies]
capnpc = "0.8.9"

[dependencies]
actix = {version = "^0.5.8", optional = true}
actix-web = {version = "0.6", optional = true}
capnp = "0.8.17"
diesel = { version = "^1.3.0", features = ["postgres", "r2d2"], optional = true }
dotenv = { version = "0.10", optional = true}
futures = { version = "0.1.23", optional = true }
yew = { git = "https://github.com/DenisKolodin/yew", optional = true }
stdweb = { version = "0.4.7", optional = true }
r2d2 = { version = "0.8.2", optional = true }
jsonwebtoken = { version = "4", optional = true }
uuid = { version = "0.6", features = ["v4"], optional = true }
time = { version = "0.1.40", optional = true }
lazy_static = "1.0.2"
failure = "0.1.1"
serde = "1.0.70"
serde_derive = "1.0.70"

[features]
default = [
    "actix", "actix-web",
    "jsonwebtoken",
    "uuid",
    "time",
    "diesel",
    "dotenv",
    "r2d2",
    "futures",
]
frontend = [
    "yew",
    "stdweb",
]
