[package]
name = "backend"
version = "0.1.0"
authors = ["Steve Sweetney <stevesweetney@gmail.com>"]

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
actix = {version = "~0.7"}
actix-web = {version = "~0.7"}
capnp = "0.8.17"
diesel = { version = "^1.3.0", features = ["postgres", "r2d2"]}
dotenv = { version = "0.10"}
futures = { version = "0.1.23"}
r2d2 = { version = "0.8.2"}
jsonwebtoken = { git = "https://github.com/Keats/jsonwebtoken"}
uuid = { version = "0.6", features = ["v4"]}
time = { version = "0.1.40"}
bcrypt = { version = "0.2"}
lazy_static = "1.0.2"
failure = "0.1.1"
serde = "1.0.70"
serde_derive = "1.0.70"
wakkave = { path = ".." }